--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,10 @@
   float: left;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 620px) {
   .main {
     box-sizing: border-box;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 50px 20px 20px 10px;
   }
 
   .main img {
